# LIC-Howtos

./: .gitignore  LICENSE  README.md  model.py  ops.py  pyproject.toml  train.py
src/: model.py  ops.py
src/scripts/: codec.py  train.py
src/tests/: test_model.py  test_trainer.py
visualize_distributions/: dist.py  dist_noise.py  dist_q.py
