[project]
name = "LIC-Howtos"
version = "0.1.0"
description = "Materials for training Learned Image Compression models"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "constriction==0.4.1",
    "ruff>=0.13.1",
    "torch",
    "torchvision",
    "imagesize",
    "more_itertools",
]

[tool.poetry]
package-mode = false